<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:background="#ffffff"
    tools:context=".ui.login.LoginFragment">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Prijavi se v svoj račun"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".37"
        app:layout_constraintWidth_percent=".8"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:textColorHint="#999999"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".46"
        app:layout_constraintHorizontal_bias=".5"
        android:background="@drawable/edit_text_bg"
        android:textColor="@color/black"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:textColorHint="#999999"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintHorizontal_bias=".5"
        android:background="@drawable/edit_text_bg"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="20dp"
         />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:layout_constraintWidth_percent=".56"
        app:layout_constraintVertical_bias=".7"
        android:layout_marginBottom="100dp"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@drawable/button_face"
        android:onClick="takePicture"
        android:text="Biometrična prijava"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".56"
        app:layout_constraintVertical_bias=".74"
        android:layout_gravity="start"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>